add jdk16 profile